# Jira-MCP

./: .gitignore  README.md  install.sh  jira_RAG.py  jql_builder.py  main.py  pyproject.toml  requirements.txt  run_jira_rag_test.py  test.csv  test.json
test_chroma_db/: chroma.sqlite3
tests/: test_jira_rag.py
